without math / has to be fixed in docker container

--- a/grundlagen.tex
+++ b/grundlagen.tex
@@ -4,50 +4,6 @@
 Zähler x Zähler\\
 Nenner x  Nenner \\
 
-Brüche werden dividiert in dem mal den Kehrwert multipliziert.\\
-
-\subsection{Potenzieren und Exponenten}
-
-\begin{multicols}{3}
-  {\color{fulda_green}Positiver} Exponent\\
-  \newline
-  \columnbreak
-  $a^n = \underbrace{a \cdot a \cdot a ...}_{n Faktoren}$ \\
-  {\color{red}Negativer} Exponent\\
-  \newline
-  \columnbreak
-  $n^{-n} = \frac{1}{a^n}$ \\
-  {\color{monoorange}Rationaler} Exponent\\
-  \newline
-  $a^{\frac{m}{n}} = \sqrt[n]{m} = (\sqrt[n]{a})^m$ \\
-\end{multicols}
-
-\subsection{Potenzgesetze}
-Gleiche Basis
-% \setlength{\columnsep}{2px}
-%\begin{multicols}{Spaltenzahl}[''titel''][''Abstand'']
-
-\begin{multicols}{2}
-    \centering{$a^p \cdot a^q = a^{p + q}$}\\
-    \columnbreak
-  $a^p : a^q = \frac{a^p}{a^q} = a^{p-q} $
-\end{multicols}
-
-Gleiche Exponenten
-\begin{multicols}{2}
-    \centering{$a^p \cdot b^p = (a \cdot b)^p$}\\
-    \columnbreak
-  $a^p : b^p = \frac{a^p}{b^p} = (\frac{a}{b})^p $
-\end{multicols}
-
-Potenzieren von Potenzen
-\begin{align*}
-  (a^p)^q &= a^{p \cdot q}
-\end{align*}
-
-
-\begin{multicols}{2}
-    \centering{$a^{\frac{1}{n}} = \sqrt[n]{a} $}\\
-    \columnbreak
-  $a^{-\frac{1}{n}} = \frac{1}{\sqrt[n]{a}} $
-\end{multicols}
+\monocodebox{html}{HTML}{./code/html.html}{false}{1}{9999999}
+\monocodebox{css}{CSS}{./code/css.css}{false}{1}{9999999}
+\monocodebox{js}{JavaScript}{./code/javascript.js}{false}{1}{4}
