--- a/Main.tex
+++ b/Main.tex
@@ -65,8 +65,8 @@ $\bullet$ \\
 \begin{document}
 % \AddToShipoutPicture{\BackgroundPic}
 \maketitle%
-\newpage%
- \tableofcontents%
+% \newpage%
+%  \tableofcontents%
 % \newpage
 %==================================================================================
 % \begin{center}
