--- a/basicff.sty
+++ b/basicff.sty
@@ -4,7 +4,7 @@
 %\usepackage[T1]{fontenc}
 %\newcommand{\changefont}[3]{
 %\fontfamily{#1} \fontseries{#2} \fontshape{#3} \selectfont}
-\usepackage{amsmath}
+% \usepackage{amsmath} <------------------------------------------------math
 \usepackage{hyperref}
 \usepackage{array}
 \usepackage{multicol}
@@ -48,10 +48,10 @@
 \oddsidemargin-10mm
 \usepackage{empheq}
 %\usepackage[ngerman]{babel}                                   % deutsche Babel
-\usepackage{pxfonts,txfonts,upgreek,}                               % einige mathe symbole plus schöne schrift
+% \usepackage{pxfonts,txfonts,upgreek,}                 <------------------------------------------------math              % einige mathe symbole plus schöne schrift
 \usepackage{amssymb}
 \usepackage{MnSymbol}
-\usepackage{amsmath}
+% \usepackage{amsmath}<------------------------------------------------math
 \renewcommand*{\familydefault}{\sfdefault}
 
 \usepackage[all]{tcolorbox}
