--- a/grundlagen.tex
+++ b/grundlagen.tex
@@ -1,12 +1,9 @@
 \section{Grundlagen}
-\setlength{\columnseprule}{1px}
-\subsubsection{Brüche}
-Zähler x Zähler\\
-Nenner x  Nenner \\
-
-\monocodebox{html}{HTML}{./code/html.html}{false}{1}{9999999}
-\monocodebox{css}{CSS}{./code/css.css}{false}{1}{9999999}
-\monocodebox{js}{JavaScript}{./code/javascript.js}{false}{1}{4}
 
 
-Test
+% \monocodebox{html}{HTML}{./code/html.html}{false}{1}{9999999}
+% \monocodebox{css}{CSS}{./code/css.css}{false}{1}{9999999}
+% \monocodebox{js}{JavaScript}{./code/javascript.js}{false}{1}{4}
+%
+%
+% Test
